--- a/OnlineBookStore/OnlineBookStore/Views/Category/Edit.cshtml
+++ b/OnlineBookStore/OnlineBookStore/Views/Category/Edit.cshtml
@@ -1,19 +1,19 @@
 ﻿@model Category
-
 <div class="card shadow border-2 mt-4">
     <div class="card-header bg-primary bg-gradient m-lg-0 py-3">
         <div class="row">
             <div class="col-12 text-center">
-                <h2 class="text-white py-2"> Create Category</h2>
+                <h2 class="text-white py-2"> Edit Category</h2>
             </div>
         </div>
     </div>
 </div>
 
 <div class="card-body p-4">
-    <form method="post" class="row">
+    <form method="post">
+        <input asp-for="Id" hidden />
         <div class="border p-3 ">
-             
+
             <div class="form-floating py-2 col-12">
                 <input asp-for="Name" class="form-control border-0 shadow" />
                 <label asp-for="Name" class="ms-2"></label>
@@ -21,14 +21,14 @@
 
             </div>
             <div class="form-floating py-2 col-12">
-                <input asp-for="DisplayOrder"  class="form-control border-0 shadow" />
+                <input asp-for="DisplayOrder" class="form-control border-0 shadow" />
                 <label asp-for="DisplayOrder" class="ms-2"></label>
                 <span asp-validation-for="DisplayOrder" class="text-danger"></span>
             </div>
 
-            <div class="row">
+            <div class="row mt-3">
                 <div class="col-6 col-md-3">
-                    <button type="submit" class="btn btn-primary form-control">Create</button>
+                    <button type="submit" class="btn btn-primary form-control">Update</button>
                 </div>
                 <div class="col-6 col-md-3">
                     <a asp-controller="Category" asp-action="Index" class="btn btn-outline-primary form-control">Back to List</a>
@@ -38,7 +38,9 @@
     </form>
 </div>
 
-@section Scripts{
+
+
+@section Scripts {
     @{
         <partial name="_ValidationScriptsPartial" />
 
