--- a/OnlineBookStore/OnlineBookStore/Views/Category/Index.cshtml
+++ b/OnlineBookStore/OnlineBookStore/Views/Category/Index.cshtml
@@ -1,6 +1,19 @@
 ﻿@model List<Category>
-<div class="container">
-    <div class="row pt-4 pb-3">
+
+    
+
+    <div class="card shadow border-2 mt-4">
+        <div class="card-header bg-primary bg-gradient m-lg-0 py-3">
+            <div class="row">
+                <div class="col-12 text-center">
+                    <h2 class="text-white py-2">  Category List</h2>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="card-body p-4">
+        <div class="row pt-4 pb-3">
         <div class="col-6">
             <h2 class="text-primary">
                 CATEGORY LIST
@@ -10,34 +23,36 @@
             <a asp-controller="Category" asp-action="Create" class="btn btn-primary"><i class="bi bi-plus-circle-fill"></i> CREATE NEW CATEGORY</a>
         </div>
     </div>
-<table class="table table-bordered table-striped">
-    <thead>
-        <tr>
-            <th> Category Name</th>
-            <th>Display Order</th>
-            <th></th>
-        </tr>
-    </thead>
-   <tbody>
-        @foreach(var obj in Model.OrderBy(u=> u.DisplayOrder))
-        {
-            <tr>
-                <td>@obj.Name</td>
-                <td>@obj.DisplayOrder</td>
-                <td>
-                    <div class="w-75 btn-group" role="group">
-                        <a asp-controller="Category" asp-action="Edit" class="btn btn-primary mx-2">
-                                <i class="bi bi-pencil-square"></i> Edit
-                        </a>
-                        
-                         <a asp-controller="Category" asp-action="Delete" class="btn btn-danger mx-2">
-                                <i class="bi bi-trash-fill"></i> Delete
-                          </a>
-                     </div>
+        <table class="table table-bordered table-striped">
+            <thead>
+                <tr>
+                    <th> Category Name</th>
+                    <th>Display Order</th>
+                    <th></th>
+                </tr>
+            </thead>
+            <tbody>
+                @foreach (var obj in Model.OrderBy(u => u.DisplayOrder))
+                {
+                    <tr>
+                        <td>@obj.Name</td>
+                        <td>@obj.DisplayOrder</td>
+                        <td>
+                            <div class="w-75 btn-group" role="group">
+                                <a asp-controller="Category" asp-action="Edit" asp-route-id="@obj.Id" class="btn btn-primary mx-2">
+                                    <i class="bi bi-pencil-square"></i> Edit
+                                </a>
 
-                </td>
-            </tr>
-        }
-    </tbody>
-</table>
-</div>
+                                <a asp-controller="Category" asp-action="Delete" asp-route-id="@obj.Id" class="btn btn-danger mx-2">
+                                    <i class="bi bi-trash-fill"></i> Delete
+                                </a>
+                            </div>
+
+                        </td>
+                    </tr>
+                }
+            </tbody>
+        </table>
+    </div>
+
+
