--- a/OnlineBookStore/OnlineBookStore/Areas/Admin/Views/_ViewImports.cshtml
+++ b/OnlineBookStore/OnlineBookStore/Areas/Admin/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using OnlineBookStore
 @using OnlineBookStore.Models
+@using OnlineBookStore.Models.ViewModel
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
