--- a/OnlineBookStore/OnlineBookStore/Views/Shared/_Layout.cshtml
+++ b/OnlineBookStore/OnlineBookStore/Views/Shared/_Layout.cshtml
@@ -63,6 +63,7 @@
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
+    <script src="https://cdn.tiny.cloud/1/o29kcvfreo6d8dbyuijw6wajy62yph6u5ohhjyhtvcaa45tf/tinymce/7/tinymce.min.js" referrerpolicy="origin"></script>
     @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
