--- a/OnlineBookStore/OnlineBookStore/Areas/Admin/Views/Product/Index.cshtml
+++ b/OnlineBookStore/OnlineBookStore/Areas/Admin/Views/Product/Index.cshtml
@@ -1,7 +1,4 @@
 ﻿@model List<Product>
-
-    
-
     <div class="card shadow border-2 my-4">
         <div class="card-header bg-primary bg-gradient m-lg-0 py-3">
             <div class="row">
@@ -23,7 +20,7 @@
             <a asp-controller="Product" asp-action="Upsert" class="btn btn-primary"><i class="bi bi-plus-circle-fill"></i> CREATE NEW PRODUCT</a>
         </div>
     </div>
-        <table class="table table-bordered table-striped">
+        <table id="tblData" class="table table-bordered table-striped" style="width:100%">
             <thead>
                 <tr>
                     <th>Title</th>
@@ -33,34 +30,10 @@
                     <th>Category</th>
                     <th></th>
                 </tr>
-            </thead>
-            <tbody>
-                @foreach (var obj in Model)
-                {
-                    <tr>
-                        <td>@obj.Title</td>                
-                        <td>@obj.ISBN</td>
-                        <td>@obj.ListPrice</td>
-                        <td>@obj.Author</td>
-                        <td> 
-
-                        </td>
-                        <td>
-                            <div class="w-75 btn-group" role="group">
-                                <a asp-controller="Product" asp-action="Upsert" asp-route-id="@obj.Id" class="btn btn-primary mx-2">
-                                    <i class="bi bi-pencil-square"></i> Edit
-                                </a>
-
-                                <a asp-controller="Product" asp-action="Delete" asp-route-id="@obj.Id" class="btn btn-danger mx-2">
-                                    <i class="bi bi-trash-fill"></i> Delete
-                                </a>
-                            </div>
-
-                        </td>
-                    </tr>
-                }
-            </tbody>
+            </thead>         
         </table>
     </div>
-
+ @section Scripts{
+        <script src="~/js/product.js"></script>    
+}
 
