--- a/OnlineBookStore/OnlineBookStore/Views/Shared/_Layout.cshtml
+++ b/OnlineBookStore/OnlineBookStore/Views/Shared/_Layout.cshtml
@@ -9,7 +9,8 @@
     <link rel="stylesheet" href="~/OnlineBookStore.styles.css" asp-append-version="true" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/css/toastr.min.css" />
-    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <link rel="stylesheet" href="https://cdn.datatables.net/1.10.25/css/jquery.dataTables.min.css" />
+    
 </head>
 <body>
     <header>
@@ -63,7 +64,10 @@
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
+    <script src="https://cdn.datatables.net/1.10.25/js/jquery.dataTables.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="https://cdn.tiny.cloud/1/o29kcvfreo6d8dbyuijw6wajy62yph6u5ohhjyhtvcaa45tf/tinymce/7/tinymce.min.js" referrerpolicy="origin"></script>
+   
     @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
